--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header id="main-header">
    
           <nav class="navbar">
+            <img src="./assets/logo.2c489fc453a1783cbadacf914efa3df6.svg" alt="">
             <a href="">Treact</a>
             <div class="navbar-links">
 
