working on project, creating website

--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <main>
+    <section id="landing">
   <div class="container">
-    <header id="main-header">
-   
+    <div class="row">
           <nav class="navbar">
-            <img src="./assets/logo.2c489fc453a1783cbadacf914efa3df6.svg" alt="">
-            <a href="">Treact</a>
-            <div class="navbar-links">
+            <div class="nav__logo--wrapper">
+              <a href="" class="nav__logo"><img src="./assets/logo.2c489fc453a1783cbadacf914efa3df6.svg" class="logo__img" alt="">Treact</a>
+            </div>
+            <div class="navbar__links">
 
               <ul class="list">
                 <li><a href="#">About</a></li>
@@ -22,11 +24,13 @@
                 <li><a href="#">Pricing</a></li>
                 <li><a href="#">Contact Us</a></li>
                 <li><a href="#">Login</a></li>
+                <button class="btn">Sign Up</button>
               </ul>
             </div>
             </nav>
-            </div>
           </div>
+            </div>
           </header>
+        </main>
 </body>
 </html>
