working on project

--- a/index.html
+++ b/index.html
@@ -19,12 +19,15 @@
             <div class="navbar__links">
 
               <ul class="list">
-                <li><a href="#">About</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Pricing</a></li>
-                <li><a href="#">Contact Us</a></li>
-                <li><a href="#">Login</a></li>
-                <button class="btn">Sign Up</button>
+                <li>
+                  <a href class="nav__link"#">About</a>
+                </li>
+                <li><a href class="nav__link">Blog</a></li>
+                <li><a href class="nav__link">Pricing</a></li>
+                <li><a href class="nav__link">Contact Us</a></li>
+                <li><a href class="nav__link">Login</a></li>
+                <li><a href class="nav__link--primary">Sign Up</a></li>
+                
               </ul>
             </div>
             </nav>
