--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <main>
+ 
     <section id="landing">
   <div class="container">
     <div class="row">
@@ -17,7 +17,6 @@
               <a href="" class="nav__logo"><img src="./assets/logo.2c489fc453a1783cbadacf914efa3df6.svg" class="logo__img" alt="">Treact</a>
             </div>
             <div class="navbar__links">
-
               <ul class="list">
                 <li>
                   <a href class="nav__link"#">About</a>
@@ -27,13 +26,34 @@
                 <li><a href class="nav__link">Contact Us</a></li>
                 <li><a href class="nav__link">Login</a></li>
                 <li><a href class="nav__link--primary">Sign Up</a></li>
-                
               </ul>
             </div>
             </nav>
           </div>
+          <div class="row row__header">
+            <header>
+              <div class="header__left">
+                <h1 class="header__title">Beautiful React Templates<span class="purple">for you.</span>
+                </h1>
+                <p class="header__para">
+                  Our templates are easy to setup, understand and customize. Fully modular components with a variety of pages and components.
+                </p>
+                <div class="header__input--container">
+                  <input type="text" placeholder="Your E-mail Address" class="header__input">
+                  <button class="header__input--button">Get Started</button>
+                </div>
+                <div class="customers__container">
+                  <p class="customers__title">OUR TRUSTED CUSTOMERS</p>
+                  <img src="https://treact.owaiskhan.me/static/media/customers-logo-strip.680ac7c2e8ae28161d2c.png" class="customers__img" alt="">
+                </div>
+              </div>
+              <div class="header__right">
+                <img src="https://treact.owaiskhan.me/static/media/design-illustration-2.6da6a00b20c07c4a9b65d1870679e1b8.svg" class="header__img" alt="">
+              </div>
+          </div>
             </div>
           </header>
+          <main>
         </main>
 </body>
 </html>
