--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <div class="row row__header">
             <header>
               <div class="header__left">
-                <h1 class="header__title">Beautiful React Templates<span class="purple">for you.</span>
+                <h1 class="header__title">Beautiful React Templates<span class="purple"> for you.</span>
                 </h1>
                 <p class="header__para">
                   Our templates are easy to setup, understand and customize. Fully modular components with a variety of pages and components.
@@ -54,6 +54,202 @@
             </div>
           </header>
           <main>
-        </main>
+            <section id="features">
+              <div class="container container__features">
+                <div class="row row__features">
+                  <div class="features__description">
+                    <h3 class="section__title">
+                      FEATURES
+                    </h3>
+                    <h2 class="section__subtitle"> We have Amazing <span class="purple">Service.</span>
+                    </h2>
+                    <p class="section__para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    </p>
+                  </div>
+                  <div class="services">
+                    <div class="service">
+                      <figure class="service__img--container">
+                        <img src="https://treact.owaiskhan.me/static/media/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg" class="service__img" alt="">
+                      </figure>
+                      <div class="service__description">
+                        <span class="service__title">Secure</span>
+                        <p class="service__para">We strictly only deal with vendors that provide top notch security.</p>
+                      </div>
+                    </div>
+                    <div class="service">
+                      <figure class="service__img--container">
+                        <img src="https://treact.owaiskhan.me/static/media/support-icon.f9253ffa8cb6ffde5bbaa05eb5136375.svg" class="service__img" alt="">
+                      </figure>
+                      <div class="service__description">
+                        <span class="service__title">24/7 Support</span>
+                        <p class="service__para">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
+                      </div>
+                    </div>
+                    <div class="service">
+                      <figure class="service__img--container">
+                        <img src="https://treact.owaiskhan.me/static/media/customize-icon.367468c90fd796009b97fbfba67b2c6a.svg" class="service__img" alt="">
+                      </figure>
+                      <div class="service__description">
+                        <span class="service__title">Customizable</span>
+                        <p class="service__para">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
+                      </div>
+                    </div>
+                    <div class="service">
+                      <figure class="service__img--container">
+                        <img src="https://treact.owaiskhan.me/static/media/reliable-icon.1367510a8f0a1bec76dc425d25f92f43.svg" class="service__img" alt="">
+                       </figure>
+                        <div class="service__description">
+                        <span class="service__title">Reliable</span>
+                        <p class="service__para">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
+                      </div>
+                    </div>
+                    <div class="service">
+                      <figure class="service__img--container">
+                        <img src="https://treact.owaiskhan.me/static/media/fast-icon.dbb971a73d4805d2fc3bcdacdb55beba.svg" class="service__img" alt="">
+                      </figure>
+                      <div class="service__description">
+                        <span class="service__title">Fast</span>
+                        <p class="service__para">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
+                      </div>
+                    </div>
+                    <div class="service">
+                      <figure class="service__img--container">
+                        <img src="https://treact.owaiskhan.me/static/media/simple-icon.673b7e1750b2a4ef32907fc164828d00.svg" class="service__img" alt="">
+                      </figure>
+                      <div class="service__description">
+                        <span class="service__title">Easy</span>
+                        <p class="service__para">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </section>
+            <section id="quality">
+              <div class="container">
+                <div class="row row__quality">
+                  <div class="quality__description">
+                  <h3 class="section__title">
+                    QUALITY WORK
+                  </h3>
+                  <h2 class="section__subtitle">
+                    Designed & Developed by <span class="purple">Professionals.</span>
+                  </h2>
+                  <p class="section__para">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                  </p>
+                  <button class="section__btn">Learn More</button>
+                </div>
+                <figure class="quality__img--container"><img src="https://treact.owaiskhan.me/static/media/hero-screenshot-1.40a097b525c2f8c9808e.png" class="quality__img" alt=""></figure>
+                </div>
+              </div>
+            </section>
+            <section id="steps">
+            <div class="container">
+              <div class="row row__steps">
+                <figure class="steps__img--container">
+                  <img src="https://treact.owaiskhan.me/static/media/hero-screenshot-2.241aac1fbc66db29d873.png" class="steps__img" alt="">
+                </figure>
+                <div class="steps__description">
+                  <h3 class="section__title">STEPS</h3>
+                  <h2 class="section__subtitle">Easy To <span class="purple">Get Started.</span></h2>
+                  <div class="steps__wrapper">
+                    <div class="step">
+                    <div class="step__number">01</div>
+                    <div class="step__description">
+                      <div class="step__title">Register</div>
+                      <p class="step__para">Create an account with us using Google or Facebook.
+                      </p>
+                    </div>
+                  </div>
+                    <div class="step">
+                    <div class="step__number">02</div>
+                    <div class="step__description">
+                      <div class="step__title">Download</div>
+                      <p class="step__para">Browse and Download the template that you like from the marketplace.
+                      </p>
+                    </div>
+                  </div>
+                    <div class="step">
+                    <div class="step__number">03</div>
+                    <div class="step__description">
+                      <div class="step__title">Run</div>
+                      <p class="step__para">Follow the instructions to setup and customize the template to your friends.
+                      </p>
+                    </div>
+                  </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+        </section>
+        <section id="pricing">
+          <div class="container">
+            <div class="row">
+              <div class="pricing__description">
+              <h3 class="section__title">PRICING</h3>
+              <h2 class="section__subtitle">Reasonable & Flexible <span class="purple">Plans.</span></h2>
+              <p class="section__para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+            <div class="plans__container">
+              <div class="plan">
+                <div class="plan__line"></div>
+                <div class="plan__header">
+                  <span class="plan__title">PERSONAL</span>
+                  <span class="plan__price">$17.99</span>
+                  <span class="plan__length">MONTHLY</span>
+                </div>
+                <div class="plan__body">
+                  <span class="plan__feature--main">For Individuals</span>
+                  <span class="plan__feature">30 Templates</span>
+                  <span class="plan__feature">7 Landing Pages</span>
+                  <span class="plan__feature">12 Internal Pages</span>
+                  <span class="plan__feature">Basic Assistance</span>
+                </div>
+                <div class="plan__footer">
+                  <button class="plan__btn">BUY NOW</button>
+                </div>
+              </div>
+              <div class="plan plan--blue">
+                <div class="plan__header">
+                  <span class="plan__title">BUSINESS</span>
+                  <span class="plan__price">$37.99</span>
+                  <span class="plan__length">MONTHLY</span>
+                </div>
+                <div class="plan__body">
+                  <span class="plan__feature--main">For Small Businesses</span>
+                  <span class="plan__feature">60 Templates</span>
+                  <span class="plan__feature">15 Landing Pages</span>
+                  <span class="plan__feature">22 Internal Pages</span>
+                  <span class="plan__feature">Priority Assistance</span>
+                </div>
+                <div class="plan__footer">
+                  <button class="plan__btn plan__btn--blue">BUY NOW</button>
+                </div>
+              </div>
+              <div class="plan">
+                <div class="plan__line plan__line--red"></div>
+                <div class="plan__header">
+                  <span class="plan__title">ENTERPRISE</span>
+                  <span class="plan__price">$57.99</span>
+                  <span class="plan__length">MONTHLY</span>
+                </div>
+                <div class="plan__body">
+                  <span class="plan__feature--main">For Large Companies</span>
+                  <span class="plan__feature">90 Templates</span>
+                  <span class="plan__feature">27 Landing Pages</span>
+                  <span class="plan__feature">37 Internal Pages</span>
+                  <span class="plan__feature">Personal Assistance</span>
+                </div>
+                <div class="plan__footer">
+                  <button class="plan__btn plan__btn--red">BUY NOW</button>
+                </div>
+              </div>
+
+            </div>
+            </div>
+          </div>
+        </section>
+          </main>
 </body>
 </html>
