--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>React Template</title>
     <link rel="stylesheet" href="styles.css">
+    <script
+    src="https://kit.fontawesome.com/c8e4d183c2.js"
+    crossorigin="anonymous"
+  ></script>
 </head>
 <body>
  
@@ -251,5 +255,72 @@
           </div>
         </section>
           </main>
+          <footer>
+            <div class="row">
+              <div class="footer__links">
+                <div class="footer__list">
+                  <h5 class="footer__title">MAIN</h5>
+                  <a href="" class="footer__link">Blog</a>
+                  <a href="" class="footer__link">FAQs</a>
+                  <a href="" class="footer__link">Support</a>
+                  <a href="" class="footer__link">About Us</a>
+                </div>
+                <div class="footer__list">
+                  <h5 class="footer__title">PRODUCT</h5>
+                  <a href="" class="footer__link">Log In</a>
+                  <a href="" class="footer__link">Personal</a>
+                  <a href="" class="footer__link">Business</a>
+                  <a href="" class="footer__link">Team</a>
+                </div>
+                <div class="footer__list">
+                  <h5 class="footer__title">PRESS</h5>
+                  <a href="" class="footer__link">Logos</a>
+                  <a href="" class="footer__link">Events</a>
+                  <a href="" class="footer__link">Stories</a>
+                  <a href="" class="footer__link">Office</a>
+                </div>
+                <div class="footer__list">
+                  <h5 class="footer__title">TEAM</h5>
+                  <a href="" class="footer__link">Career</a>
+                  <a href="" class="footer__link">Founders</a>
+                  <a href="" class="footer__link">Culture</a>
+                  <a href="" class="footer__link">Onboarding</a>
+                </div>
+                <div class="footer__list">
+                  <h5 class="footer__title">LEGAL</h5>
+                  <a href="" class="footer__link">GDPR</a>
+                  <a href="" class="footer__link">Privacy Policy</a>
+                  <a href="" class="footer__link">Terms of Service</a>
+                  <a href="" class="footer__link">Disclaimer</a>
+                </div>
+              </div>
+              <div class="footer__copyright">
+                <div class="logo__container">
+                  <div class="logo">
+                    <img
+                src="https://treact.owaiskhan.me/static/media/logo-light.d9a5d1b5be5ea077b26864fdfc2e96a4.svg"
+                class="logo__img"
+                alt=""
+              />
+              <span class="logo__text logo__text--footer">Treact Inc.</span>
+                  </div>
+                </div>
+                <p class="footer__copyright--para">
+                  &copy; 2018 Treact Inc. All Rights Reserved.
+                </p>
+                <div class="footer__social--links">
+                  <a href="https://www.facebook.com" class="footer__social--link">
+                    <i class="fab fa-facebook"></i>
+                  </a>
+                  <a href="https://www.twitter.com" class="footer__social--link">
+                    <i class="fab fa-twitter"></i>
+                  </a>
+                  <a href="https://www.youtube.com" class="footer__social--link">
+                    <i class="fab fa-youtube"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </footer>
 </body>
 </html>
