finished project, added get started card

--- a/index.html
+++ b/index.html
@@ -263,6 +263,23 @@
             </div>
           </div>
         </section>
+        <section id="get-started">
+          <div class="container">
+            <div class="row">
+            <div class="get-started__wrapper">
+              <div class="get-started__description">
+              <span class="get-started__para">
+                Developers all over the world are happily using Treact
+              </span>
+            </div>
+                <div class="button__wrapper">
+                  <button class="get-started__btn get-started__btn--red">Get Started</button>
+                  <button class="get-started__btn get-started__btn--blue">Contact Us</button>
+                </div>
+            </div>
+            </div>
+          </div>
+        </section>
           </main>
           <footer>
             <div class="row">
